erDiagram
    ObservationEvent {
        guid EventId PK
        string SubjectId FK
        string Activity
        datetime ObservedAtUtc
        bool IsSignificant
        bool IsOutlier
    }

    SubjectProfile {
        string SubjectId PK
        string DisplayName
        datetime LastSeenUtc
        string LastActivity
    }

    DailyChapter {
        date Date PK
        string Narrative
    }

    Highlight {
        guid EventId FK
        int Rank
    }

    SubjectProfile ||--o{ ObservationEvent : "has"
    DailyChapter ||--o{ ObservationEvent : "timeline"
    DailyChapter ||--o{ Highlight : "highlights"
    Highlight }|--|| ObservationEvent : "references"
